# RE-flex

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL.md  LICENSE.txt  Makefile.am  Makefile.in  README.md  aclocal.m4  allinstall.sh  bootstrap.sh  build.sh  clean.sh  config.h.in  configure  configure.ac  install.sh  lex.vim  makemake.sh  man.sh  meson.build  meson.options  reflex.pc  reflex.pc.in  reflexmin.pc  reflexmin.pc.in  xmake.lua
.github/: config.yml
.github/workflows/: build.yml  c-cpp.yml  codeql.yml  sanitizer.yml  test.yml
bison-complete-test/: Makefile.gcc  main.cpp  parser.yy  scanner.l  test.txt
bootstrap/: Makefile.am
cmake/: CMakeLists.cmake  Config.cmake.in  ReflexCMakeSupport.cmake  SIMDTestAndSetup.cmake  gen_lexer.cmake  reflex-config.cmake  reflex.pc.in
doc/: .index.md.swp  Doxyfile  Doxyfile.in  Makefile.am  README.md  doxygen_content.css  doxygen_tabs.css  footer.html  header.html  index.md  man.sh  reflex_doc_zh-CN.md
doc/html/: _l_i_c_e_n_s_e_8txt.html  _r_e_a_d_m_e_8md.html  abslexer_8h.html  abslexer_8h__dep__incl.map  abslexer_8h__dep__incl.md5  abslexer_8h__incl.map  abslexer_8h__incl.md5  absmatcher_8h.html  absmatcher_8h.js  absmatcher_8h__dep__incl.map  absmatcher_8h__dep__incl.md5  absmatcher_8h__incl.map  absmatcher_8h__incl.md5  annotated.html  annotated_dup.js  bits_8h.html  bits_8h__dep__incl.map  bits_8h__dep__incl.md5  bits_8h__incl.map  bits_8h__incl.md5  boostmatcher_8h.html  boostmatcher_8h__incl.map  boostmatcher_8h__incl.md5  class_reflex-members.html  class_reflex.html  class_reflex.js  class_reflex__coll__graph.map  class_reflex__coll__graph.md5  classes.html  classreflex_1_1_abstract_lexer-members.html  classreflex_1_1_abstract_lexer.html  classreflex_1_1_abstract_lexer.js  classreflex_1_1_abstract_lexer_1_1_matcher-members.html  classreflex_1_1_abstract_lexer_1_1_matcher.html  classreflex_1_1_abstract_lexer_1_1_matcher.js  classreflex_1_1_abstract_lexer_1_1_matcher__coll__graph.map  classreflex_1_1_abstract_lexer_1_1_matcher__coll__graph.md5  classreflex_1_1_abstract_lexer_1_1_matcher__inherit__graph.map  classreflex_1_1_abstract_lexer_1_1_matcher__inherit__graph.md5  classreflex_1_1_abstract_lexer__coll__graph.map  (+663 more)
doc/man/: reflex.1
examples/: CMakeLists.txt  Make  Makefile  Makefile.am  Makefile.in  README.md  braille.l  build.sh  calc.l  calc.test  calc.y  cards.cpp  cdefs.l  cow.l  cows.l  csv.l  ctokens.l  cvt2utf.cpp  dos.l  echo.l  error.txt  example.json  example.yaml  example10.bat  example10.l  example10.lexer  example10.parser  example10.y  example10a.test  example10b.test  example10clean.bat  fastfind.l  fastsearch.cpp  fastsearch_fsm.cpp  flexexample1.l  flexexample10.l  flexexample10.test  flexexample10a.test  flexexample10b.test  flexexample11.lxx  (+88 more)
fuzzy/: README.md  ftest.cpp  fuzzymatcher.h
include/: Makefile.am  abslexer.h  absmatcher.h  bits.h  boostmatcher.h  debug.h  flexlexer.h  input.h  matcher.h  missing.h  pattern.h  ranges.h  setop.h  traits.h  utf8.h
include/reflex/: abslexer.h  absmatcher.h  bits.h  boostmatcher.h  convert.h  debug.h  error.h  flexlexer.h  input.h  matcher.h  pattern.h  pcre2matcher.h  posix.h  ranges.h  stdmatcher.h  timer.h  unicode.h  utf8.h
lib/: CMakeLists.txt  Make  Makefile  Makefile.am  Makefile.in  convert.cpp  debug.cpp  error.cpp  input.cpp  matcher.cpp  matcher_avx2.cpp  matcher_avx512bw.cpp  pattern.cpp  posix.cpp  unicode.cpp  utf8.cpp
src/: CMakeLists.txt  Make  Makefile  Makefile.am  Makefile.in  bootstrap_unicode.cc  convert.cpp  gen_block_scripts.ll  gen_language_scripts.ll  gen_letter_scripts.ll  language_scripts.cpp  language_scripts.h  language_scripts.l  letter_scripts.cpp  letter_scripts.h  letter_scripts.l  pl_scripts.cpp  pl_scripts.h  reflex.cpp  reflex.h
test/: Make  Makefile  a.out  btest.cpp  latin1lorem.txt  lorem.cpp  rtest.cpp  std_regex_crash.cpp  stest.cpp  test.cpp  test.sh  test_bits.cpp  test_lorem_filter.cpp  test_lorem_splitter.cpp  test_lorem_tokenizer.cpp  test_ranges.cpp  utf16lorem.txt
tests/: CMakeLists.txt  Make  Makefile.am  Makefile.in  btest.cpp  ebcdiclorem.txt  lazytest.cpp  lorem.cpp  lorem.txt  ptest.cpp  rtest.cpp  stest.cpp  streams.cpp  test.cpp  test.sh  test_bits.cpp  test_lorem_filter.cpp  test_lorem_splitter.cpp  test_lorem_tokenizer.cpp  test_lorem_tokenizer.h  test_ranges.cpp  utf16lelorem.txt  utf32lorem.txt  utf8lorem.txt
unicode/: CMakeLists.txt  Make  Makefile  Makefile.am  block_scripts.cpp  block_scripts.l  composer.l  language_scripts.cpp  language_scripts.l  letter_case.l  letter_scripts.cpp  letter_scripts.l
vs/: build.bat  clean.bat  cleanExample.bat  example.bat  example.l
